--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -30,6 +30,7 @@ editor_options:
   * [Simulation results](simulation_summary.html)
   * [Simulation null weight results](simulation_null_weight_summary.html)
   * [Simulation Param PIPs](simulation_param_PIPs.html)
+  * [Simulation no enrichment](simulation_no_enrichment.html)
   
 # Real data application
 
