--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -31,6 +31,7 @@ editor_options:
   * [Simulation null weight results](simulation_null_weight_summary.html)
   * [Simulation Param PIPs](simulation_param_PIPs.html)
   * [Simulation no enrichment](simulation_no_enrichment.html)
+  * [Simulation pip calibration](simulation_pip_calibration.html)
   
 # Real data application
 
